gen/DCRGraphGrammarParser.java
// Generated from C:/git/SoftwareEngineering/src/main/antlr4/dk/ku/di/oodcr/parser/dcr\DCRGraphGrammar.g4 by ANTLR 4.8

import dk.ku.di.oodcr.graph.*;
import dk.ku.di.oodcr.parser.ast.*;
import java.util.*;
import java.util.AbstractMap.SimpleEntry;
import java.util.Map.Entry;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DCRGraphGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, ONEorZERO=13, ID=14, CHAR=15, INT=16, NEWLINE=17, 
		WS=18;
	public static final int
		RULE_graph = 0, RULE_eventz = 1, RULE_event = 2, RULE_relationships = 3, 
		RULE_relationship = 4, RULE_conditions = 5, RULE_milestones = 6, RULE_responses = 7, 
		RULE_includes = 8, RULE_excludes = 9, RULE_eventLabel = 10, RULE_idOneOrMore = 11, 
		RULE_idSeq = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"graph", "eventz", "event", "relationships", "relationship", "conditions", 
			"milestones", "responses", "includes", "excludes", "eventLabel", "idOneOrMore", 
			"idSeq"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'('", "')'", "'{'", "'}'", "'-->*'", "'--><>'", "'*-->'", 
			"'-->+'", "'-->%'", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ONEorZERO", "ID", "CHAR", "INT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DCRGraphGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    HashMap<String,List<SimpleEntry<RelationshipType,String>>> srcToTrgts = new HashMap<>();
	    HashMap<String, Event> allEvents = new HashMap<String, Event>();

	public DCRGraphGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GraphContext extends ParserRuleContext {
		public DCRGraph value;
		public EventContext e;
		public EventzContext es;
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public EventzContext eventz() {
			return getRuleContext(EventzContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DCRGraphGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DCRGraphGrammarParser.WS, i);
		}
		public TerminalNode EOF() { return getToken(DCRGraphGrammarParser.EOF, 0); }
		public GraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).enterGraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).exitGraph(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DCRGraphGrammarVisitor ) return ((DCRGraphGrammarVisitor<? extends T>)visitor).visitGraph(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GraphContext graph() throws RecognitionException {
		GraphContext _localctx = new GraphContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_graph);

		    ((GraphContext)_localctx).value =  new DCRGraph();

		int _la;
		try {
			setState(37);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
			case WS:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(26);
					match(WS);
					}
					}
					setState(31);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(32);
				((GraphContext)_localctx).e = event();
				setState(33);
				((GraphContext)_localctx).es = eventz();

				            _localctx.value.addEvent(((GraphContext)_localctx).e.value);
				            ((GraphContext)_localctx).es.value.forEach(e -> _localctx.value.addEvent(e));


				            for (Entry<String, List<SimpleEntry<RelationshipType,String>>> srcTrgtsPair : srcToTrgts.entrySet()) {
				                Event sourceEvent = allEvents.get(srcTrgtsPair.getKey());
				                for (SimpleEntry<RelationshipType,String> relToTrgt  : srcTrgtsPair.getValue()) {
				                    RelationshipType relationshipType = relToTrgt.getKey();
				                    Event targetEvent = allEvents.get(relToTrgt.getValue());
				                    sourceEvent.addRelationship(relationshipType, targetEvent);
				                }
				            }
				        
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventzContext extends ParserRuleContext {
		public List<Event> value;
		public EventContext e;
		public EventzContext ez;
		public TerminalNode NEWLINE() { return getToken(DCRGraphGrammarParser.NEWLINE, 0); }
		public EventContext event() {
			return getRuleContext(EventContext.class,0);
		}
		public EventzContext eventz() {
			return getRuleContext(EventzContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DCRGraphGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DCRGraphGrammarParser.WS, i);
		}
		public TerminalNode EOF() { return getToken(DCRGraphGrammarParser.EOF, 0); }
		public EventzContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventz; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).enterEventz(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).exitEventz(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DCRGraphGrammarVisitor ) return ((DCRGraphGrammarVisitor<? extends T>)visitor).visitEventz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventzContext eventz() throws RecognitionException {
		EventzContext _localctx = new EventzContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_eventz);

		    ((EventzContext)_localctx).value =  new ArrayList<Event>();

		int _la;
		try {
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				match(T__0);
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(40);
					match(WS);
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(46);
				match(NEWLINE);
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(47);
					match(WS);
					}
					}
					setState(52);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(53);
				((EventzContext)_localctx).e = event();
				setState(54);
				((EventzContext)_localctx).ez = eventz();

				            _localctx.value.add(((EventzContext)_localctx).e.value);
				            _localctx.value.addAll(((EventzContext)_localctx).ez.value);
				        
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventContext extends ParserRuleContext {
		public Event value;
		public Token ID;
		public EventLabelContext el;
		public Token ex;
		public Token in;
		public Token pen;
		public RelationshipsContext rs;
		public TerminalNode ID() { return getToken(DCRGraphGrammarParser.ID, 0); }
		public List<TerminalNode> ONEorZERO() { return getTokens(DCRGraphGrammarParser.ONEorZERO); }
		public TerminalNode ONEorZERO(int i) {
			return getToken(DCRGraphGrammarParser.ONEorZERO, i);
		}
		public List<TerminalNode> WS() { return getTokens(DCRGraphGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DCRGraphGrammarParser.WS, i);
		}
		public TerminalNode NEWLINE() { return getToken(DCRGraphGrammarParser.NEWLINE, 0); }
		public EventLabelContext eventLabel() {
			return getRuleContext(EventLabelContext.class,0);
		}
		public RelationshipsContext relationships() {
			return getRuleContext(RelationshipsContext.class,0);
		}
		public EventContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).enterEvent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).exitEvent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DCRGraphGrammarVisitor ) return ((DCRGraphGrammarVisitor<? extends T>)visitor).visitEvent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventContext event() throws RecognitionException {
		EventContext _localctx = new EventContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_event);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			((EventContext)_localctx).ID = match(ID);
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(61);
				match(WS);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(67);
				((EventContext)_localctx).el = eventLabel();
				}
			}

			setState(70);
			match(T__1);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(71);
				match(WS);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			((EventContext)_localctx).ex = match(ONEorZERO);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(78);
				match(WS);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(T__0);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(85);
				match(WS);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			((EventContext)_localctx).in = match(ONEorZERO);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(92);
				match(WS);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(T__0);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(99);
				match(WS);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			((EventContext)_localctx).pen = match(ONEorZERO);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(106);
				match(WS);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(112);
			match(T__2);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(113);
				match(WS);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(119);
				match(T__3);
				setState(120);
				match(NEWLINE);
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(121);
						match(WS);
						}
						} 
					}
					setState(126);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				setState(127);
				((EventContext)_localctx).rs = relationships();
				setState(128);
				match(T__4);
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(129);
					match(WS);
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}



			            ((EventContext)_localctx).value =  (_localctx.el == null) ? new Event((((EventContext)_localctx).ID!=null?((EventContext)_localctx).ID.getText():null)) : new Event((((EventContext)_localctx).ID!=null?((EventContext)_localctx).ID.getText():null), ((EventContext)_localctx).el.value);

			            _localctx.value.marking.executed = Integer.parseInt((((EventContext)_localctx).ex!=null?((EventContext)_localctx).ex.getText():null)) == 1;
			            _localctx.value.marking.included = Integer.parseInt((((EventContext)_localctx).in!=null?((EventContext)_localctx).in.getText():null)) == 1;
			            _localctx.value.marking.pending = Integer.parseInt((((EventContext)_localctx).pen!=null?((EventContext)_localctx).pen.getText():null)) == 1;

			            allEvents.put(_localctx.value.name, _localctx.value);

			            if (_localctx.rs != null) {
			                for (OneSidedRelationship rel : ((EventContext)_localctx).rs.value) {
			                    if (rel.getVertexType() == VertexType.TARGET) { // _localctx.value is source then
			                        srcToTrgts.putIfAbsent(_localctx.value.name, new ArrayList<SimpleEntry<RelationshipType,String>>());

			                        RelationshipType relType = rel.getRelationshipType();

			                        for (String target : rel.getVertexNames()) {
			                            srcToTrgts.get(_localctx.value.name).add(new SimpleEntry<RelationshipType,String>(relType, target));
			                        }

			                    } else { // _localctx.value is target then
			                        RelationshipType relType = rel.getRelationshipType();

			                        for (String source : rel.getVertexNames()) {
			                            srcToTrgts.putIfAbsent(source, new ArrayList<SimpleEntry<RelationshipType,String>>());

			                            srcToTrgts.get(source).add(new SimpleEntry<RelationshipType,String>(relType, _localctx.value.name));
			                        }
			                    }
			                }
			            }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationshipsContext extends ParserRuleContext {
		public List<OneSidedRelationship> value;
		public RelationshipContext r;
		public RelationshipsContext rs;
		public TerminalNode NEWLINE() { return getToken(DCRGraphGrammarParser.NEWLINE, 0); }
		public RelationshipContext relationship() {
			return getRuleContext(RelationshipContext.class,0);
		}
		public RelationshipsContext relationships() {
			return getRuleContext(RelationshipsContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DCRGraphGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DCRGraphGrammarParser.WS, i);
		}
		public RelationshipsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationships; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).enterRelationships(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).exitRelationships(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DCRGraphGrammarVisitor ) return ((DCRGraphGrammarVisitor<? extends T>)visitor).visitRelationships(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationshipsContext relationships() throws RecognitionException {
		RelationshipsContext _localctx = new RelationshipsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relationships);

		    ((RelationshipsContext)_localctx).value =  new ArrayList<OneSidedRelationship>();

		int _la;
		try {
			int _alt;
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				((RelationshipsContext)_localctx).r = relationship();
				setState(140);
				match(NEWLINE);
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(141);
						match(WS);
						}
						} 
					}
					setState(146);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
				}
				setState(147);
				((RelationshipsContext)_localctx).rs = relationships();
				 _localctx.value.add(((RelationshipsContext)_localctx).r.value); _localctx.value.addAll(((RelationshipsContext)_localctx).rs.value); 
				}
				break;
			case T__4:
			case WS:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(150);
					match(WS);
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationshipContext extends ParserRuleContext {
		public OneSidedRelationship value;
		public ConditionsContext c;
		public MilestonesContext m;
		public ResponsesContext r;
		public IncludesContext i;
		public ExcludesContext e;
		public ConditionsContext conditions() {
			return getRuleContext(ConditionsContext.class,0);
		}
		public MilestonesContext milestones() {
			return getRuleContext(MilestonesContext.class,0);
		}
		public ResponsesContext responses() {
			return getRuleContext(ResponsesContext.class,0);
		}
		public IncludesContext includes() {
			return getRuleContext(IncludesContext.class,0);
		}
		public ExcludesContext excludes() {
			return getRuleContext(ExcludesContext.class,0);
		}
		public RelationshipContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationship; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).enterRelationship(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).exitRelationship(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DCRGraphGrammarVisitor ) return ((DCRGraphGrammarVisitor<? extends T>)visitor).visitRelationship(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationshipContext relationship() throws RecognitionException {
		RelationshipContext _localctx = new RelationshipContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relationship);
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				((RelationshipContext)_localctx).c = conditions();
				 ((RelationshipContext)_localctx).value =  ((RelationshipContext)_localctx).c.value; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				((RelationshipContext)_localctx).m = milestones();
				 ((RelationshipContext)_localctx).value =  ((RelationshipContext)_localctx).m.value; 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				((RelationshipContext)_localctx).r = responses();
				 ((RelationshipContext)_localctx).value =  ((RelationshipContext)_localctx).r.value; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(167);
				((RelationshipContext)_localctx).i = includes();
				 ((RelationshipContext)_localctx).value =  ((RelationshipContext)_localctx).i.value; 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(170);
				((RelationshipContext)_localctx).e = excludes();
				 ((RelationshipContext)_localctx).value =  ((RelationshipContext)_localctx).e.value; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionsContext extends ParserRuleContext {
		public OneSidedRelationship value;
		public IdOneOrMoreContext ids;
		public IdOneOrMoreContext idOneOrMore() {
			return getRuleContext(IdOneOrMoreContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DCRGraphGrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(DCRGraphGrammarParser.WS, i);
		}
		public ConditionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).enterConditions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DCRGraphGrammarListener ) ((DCRGraphGrammarListener)listener).exitConditions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DCRGraphGrammarVisitor ) return ((DCRGraphGrammarVisitor<? extends T>)visitor).visitConditions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionsContext conditions() throws RecognitionException {
		ConditionsContext _localctx = new ConditionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditions);
		int _la;
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				((ConditionsContext)_localctx).ids = idOneOrMore();
				setState(176);
				match(T__5);
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(177);
					match(WS);
					}
					}
					setState(182);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				 ((ConditionsContext)_localctx).value =  new OneSidedRelationship(RelationshipType.CONDITIONS, VertexType.SOURCE, ((ConditionsContext)_localctx).ids.value); 
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(185);
				match(T__5);
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(186);
					match(WS);
					}
					}
					setState(191);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(192);
				((ConditionsContext)_localctx).ids = idOneOrMore();
				 ((ConditionsContext)_localctx).value =  new OneSidedRelationship(RelationshipType.CONDITIONS, VertexType.TARGET, ((ConditionsContext)_localctx).ids.value); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MilestonesContext extends ParserRuleContext {
		public OneSidedRelationship value;
		public IdOneOrMoreContext ids;
		public IdOneOrMoreContext idOneOrMore() {
			return getRuleContext(IdOneOrMoreContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(DCRGraphGrammarParser.WS); }
